Import of TOMYHERO/Cache-Funky-Storage-Memcached-0.03 from CPAN.
gitpan-cpan-distribution: Cache-Funky-Storage-Memcached
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TOMYHERO/Cache-Funky-Storage-Memcached-0.03.tar.gz
gitpan-cpan-author:       TOMYHERO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Cache-Funky-Storage-Memcached
 
+0.03    2007-05-20/15:00
+        - Add SYNOPSYS
+
 0.02    2007-05-20/10:34
         - Fix Package name Type. Funcky to Funky... 
 
