--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Cache-Funky-Storage-Memcached
 
+0.07    2008-04-06/17:41
+        - add requires 'Test::Spelling' at Makefile.PL
+
+0.06    2008-04-06/16:49
+        - add spelling.t
+
 0.05    2008-04-06/11:21
         - using Module::Install
         - FIX typo
